# compositional_concepts

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  create_tables.py  download_datasets.sh  pyproject.toml  requirements.txt  run_controlled.sh
src/: clevr_scene.py  compositionality_eval.py  concept_learning.py  nmf.py  silhouette.py  synthetic_experiments.py  truth_topics.py  utils.py
src/baselines/: CUB_dataset_joint.py  __init__.py  baseline_utils.py  joint_baselines.py  unsupervised_baselines.py
src/baselines/concept_transformer/: ctc.py  vit.py
src/image_experiments/: CUB_config.yaml  CUB_loader.py  CUB_utils.py  Image_concept_learning_new.py
src/image_experiments/results/: accs_160-225_newsgroups_Llama.pkl  accs_newsgroups_Llama.pkl  accs_truth_topics.pkl  pca_accs_truth_topics.pkl
